[package]
name = "cryptocurrency"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11.0"
rand = "0.8"
ed25519-dalek = { version = "2", features = ["rand_core"] }
bs58 = "0.5"
hex = "0.4"
axum = "0.8.9"
tokio = { version = "1.52.3", features = ["rt-multi-thread", "macros"] }